--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -16,6 +16,8 @@
           color: #000;
           text-decoration: none;
           transition: all 0.3s;
+          display: flex;
+          align-items:center;
   
           &:hover {
             opacity: 0.3;
